After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696719 - GnomeIdleMonitor: don't access watch structure after it is freed
GnomeIdleMonitor: don't access watch structure after it is freed
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-27 16:48 UTC by Giovanni Campagna
Modified: 2013-03-27 17:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GnomeIdleMonitor: don't access watch structure after it is freed (1.52 KB, patch)
2013-03-27 16:48 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-03-27 16:48:37 UTC
The contents of the watch structure will become garbage after the
structure is freed, causing us to unref an invalid pointer and
potentially segfault.
Comment 1 Giovanni Campagna 2013-03-27 16:48:40 UTC
Created attachment 239973 [details] [review]
GnomeIdleMonitor: don't access watch structure after it is freed
Comment 2 Colin Walters 2013-03-27 17:15:56 UTC
Review of attachment 239973 [details] [review]:

Argh, yes.  I guess in my original testing I was lucky with the slice allocator...

This needs to be in gnome-3-8 too for sure.
Comment 3 Giovanni Campagna 2013-03-27 17:23:25 UTC
Attachment 239973 [details] pushed as 79152ba - GnomeIdleMonitor: don't access watch structure after it is freed