GnomeIdleMonitor: don't access watch structure after it is freed

The contents of the watch structure will become garbage after the
structure is freed, causing us to unref an invalid pointer and
potentially segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=696719